Change font and fixed header icons alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500&family=Open+Sans:wght@400;500;600&display=swap');
 
 body {
 	margin: 0;
-	font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
+	padding: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 
@@ -27,8 +25,9 @@ a {
 }
 
 * {
-	margin: 0;
+	font-family: 'JetBrains Mono', monospace;
 	padding: 0;
+	margin: 0;
 	box-sizing: border-box;
 	transition-duration: 0.2s;
 }
